# lib-gpio

./: .gitignore  Makefile.am  README  README.md  casa_gpio.c  casa_gpio.h  casagpio.py  configure.ac  makefile
lib/: Makefile.am  casa_gpio.c
src/: Makefile.am  gpio_prueba.c
